tool/src/c/snapshots/diplomat_tool__c__tests__cross_module_struct_fields@Foo.h.snap
---
source: tool/src/c/mod.rs
expression: out_texts.get(out).unwrap()

---
#ifndef Foo_H
#define Foo_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
extern "C" {
#endif
#include "Bar.h"

typedef struct Foo {
    Bar x;
} Foo;

void Foo_destroy(Foo* self);

#ifdef __cplusplus
}
#endif
#endif

